<resources>
    <string name="app_name">The Explorer</string>

    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="place">Add Place</string>
    <string name="event">Add Event</string>
    <string name="place_name">Place name</string>
    <string name="place_description">Place Description</string>
    <string name="submit">Submit</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="map">Map</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="time">Time</string>
    <string name="hello_blank_fragment">test</string>
    <string name="btnAddEvent">Add Event</string>
    <string name="btnAddPlace">Add Place</string>
    <string name="txtAddPictures">Add Your Memories or Pictures</string>
    <string name="txtOr">OR</string>
    <string name="txtSelectCategory">Select Category</string>
    <string name="title_the_explorer">The Explorer</string>
    <string name="select_one_category">Select One Category</string>
    <string name="event_location">Event Location</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="notification">Notification</string>
    <string name="txt_about_the_event">About the Event</string>
    <string name="txtAddEventPoster">Add Event Poster</string>
    <string name="txtTime">Time</string>
    <string name="txt_want_to_change">Replace?</string>
    <string name="event_organizer">Event Organizer</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="places">Places</string>
    <string name="events">Events</string>
    <string name="txt_location">Event Location</string>
    <string name="add">Add</string>
    <string name="txt_about_us">About Us</string>
    <string name="txt_message">Message/Feedback</string>
    <string name="about_us_checkbox">Would you like to provide email id along with the feedback?</string>
    <string name="txt_information">Information</string>
    <string name="txt_info_add_event">Add event information. Please provide the details of the event, including the event name, date, time, location, and any other relevant information you would like to include in description. For the location, once you will click on Event location, Map dialog will pop up, where you can select any location by long press and you will see address details, click on Add button once you identify the location. Once you have added the details, Select the appropriate poster for your event and click the button Add Event!</string>
    <string name="txt_title_about">Welcome to The Explorer!</string>
    <string name="txt_body_about">We are a passionate team of four developers dedicated to creating an immersive and dynamic platform that allows you to explore the world around you. Our journey began with a shared vision: to empower users to discover new places and events with ease.</string>
    <string name="txt_mission_about">Our Mission: At Explorer, we believe in the power of exploration. We want to inspire you to step outside your comfort zone and discover the incredible diversity of places and events that surround you. Our application is designed to be your trusted companion on this journey, providing a seamless and enriching experience.</string>
    <string name="txt_about_the_place">About the Place</string>
    <string name="txt_reviews_ratings">Reviews and Ratings</string>
    <string name="add_your_reviews">Add your reviews</string>
    <string name="defaultRating">4.1</string>
    <string name="txt_added_by">Added By -</string>
    <string name="txt_add_rating">Add Ratings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="txt_or">OR</string>
    <string name="txt_already_a_user">Already a User?</string>
    <string name="txt_sign_up_here">SignUp Here</string>
    <string name="txt_new_user">New User?</string>
    <string name="txt_login_here">Login Here</string>
    <string name="signup">Signup</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="error_null_error">Please Enter Credentials!</string>
    <string name="error_valid_email">Please Enter Valid Email!</string>
    <string name="error_confirm_password">Confirm password doesn\'t Match!</string>

</resources>