<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddFeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:orientation="vertical">

        <MultiAutoCompleteTextView
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_message"
            android:minLines="4"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63" />

        <CheckBox
            android:id="@+id/cbEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_checkbox"
            android:textSize="@dimen/_18sp"
            android:layout_gravity="center_horizontal"
            android:maxLines="2"
            android:layout_marginTop="@dimen/_10dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/_10dp" />

    </LinearLayout>
</FrameLayout>