<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    tools:context=".ui.LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_yellow"
            app:cardCornerRadius="@dimen/_5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:hint="@string/email"
                    android:minHeight="@dimen/_48dp"
                    android:padding="@dimen/_10dp"
                    android:textColorHint="#757575"
                    android:textSize="@dimen/_16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:hint="@string/password"
                    android:minHeight="@dimen/_48dp"
                    android:padding="@dimen/_10dp"
                    android:textColorHint="#757575"
                    android:textSize="@dimen/_16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:hint="@string/confirmPassword"
                    android:minHeight="@dimen/_48dp"
                    android:padding="@dimen/_10dp"
                    android:textColorHint="#757575"
                    android:textSize="@dimen/_16sp" />

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/signup" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_already_a_user" />

            <TextView
                android:id="@+id/btnLoginHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_weight="1"
                android:textSize="@dimen/_24sp"
                android:fontFamily="@font/fonts"
                android:textFontWeight="900"
                android:text="@string/txt_login_here" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>