<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="top|center"
        android:src="@drawable/icon_explorer_bg"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="Welcome Back"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_yellow"
            android:layout_margin="@dimen/_10dp"
            app:cardCornerRadius="@dimen/_5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:hint="@string/email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:minHeight="@dimen/_48dp"
                        android:padding="@dimen/_10dp"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#757575"
                        android:textSize="@dimen/_16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:hint="@string/password">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:layout_marginTop="@dimen/_10dp"
                        android:ems="10"
                        android:minHeight="@dimen/_48dp"
                        android:padding="@dimen/_10dp"
                        android:textColorHint="#757575"
                        android:textSize="@dimen/_16sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/login" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_new_user" />

                    <TextView
                        android:id="@+id/btnSignUpHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/fonts"
                        android:text="@string/txt_sign_up_here"
                        android:textFontWeight="900"
                        android:textSize="@dimen/_24sp" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>





        <ImageButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:background="@drawable/google" />
</LinearLayout>
