<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:backgroundTint="#DDF2FD"
            android:layout_margin="10dp"
            android:elevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp"
                android:weightSum="3">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/_5dp"
                    app:srcCompat="@drawable/icon_profile_128" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/_10dp">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4dp"
                        android:textSize="@dimen/_18sp" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4dp"
                        android:textSize="@dimen/_16sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4dp"
                        android:background="@drawable/textview_rounded_corners"
                        android:drawableLeft="@drawable/icon_reward"
                        android:drawablePadding="@dimen/_5dp"
                        android:padding="@dimen/_10dp"
                        android:text="10"
                        android:textSize="@dimen/_16sp" />


                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/tvAddFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/icon_right"
        android:padding="@dimen/_10dp"
        android:text="@string/add_feedback"
        android:textSize="@dimen/_24sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp" />

<!--    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/icon_right"
        android:padding="@dimen/_10dp"
        android:textSize="@dimen/_24sp" />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp" />-->
    <TextView
        android:id="@+id/tvAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/icon_right"
        android:padding="@dimen/_10dp"
        android:text="@string/txt_about_us"
        android:textSize="@dimen/_24sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:text="@string/logout" />
    </LinearLayout>
</LinearLayout>
